# resend-router

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md
migrations/: 0001_initial.sql
src/: config.rs  db.rs  delivery.rs  error.rs  lib.rs  main.rs  resend.rs  router.rs  signing.rs  web.rs
