[package]
name = "resend-router"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Durable Resend webhook router with domain-based routing and retrying delivery"

[dependencies]
axum = "0.8"
base64 = "0.22"
bytes = "1"
fastrand = "2"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["json", "macros", "migrate", "postgres", "runtime-tokio-rustls", "time", "uuid"] }
subtle = "2"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
